examples/semantics/errors/error5b.grace
fun error5b () : nothing
{
	chr("addas","asda");
}
